--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^4.15.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "next": "10.1.3",
     "ramda": "^0.27.1",
     "react": "17.0.2",
