--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "antd": "^4.15.3",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
